--- a/GoogleMeetTab/index.html
+++ b/GoogleMeetTab/index.html
@@ -7,6 +7,9 @@
     <title>google meet tab</title>
     <link rel="shortcut icon" href="./icons/meeting-icon.svg" type="image/x-icon">
     <link rel="stylesheet" href="./css/styl.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital@1&display=swap" rel="stylesheet">
 </head>
 <body>
     <!--google tab section start-->
@@ -30,16 +33,26 @@
                             <button class="button">contact</button>
                             <button class="button">support</button>
                         </div>
-                        <div class="meeting-tab-details">
+                        <div class="meeting tab-details">
                             <span>meeting</span>
                             <p class="desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt recusandae incidunt minus perspiciatis dolorem magni ipsa explicabo est reprehenderit rem, at accusantium provident quis modi repudiandae nam accusamus aspernatur natus!</p>
+                        </div>
+                        <div class="contact tab-details">
+                            <span>contact</span>
+                            <p class="desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt recusandae </p>
+                        </div>
+                        <div class="support tab-details">
+                            <span>support</span>
+                            <p class="desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt recusandae incidunt minus perspiciatis dolorem magni ipsa explicabo est reprehenderit rem,</p>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    
     <!--google tab section end-->
+    <!-- javascript section start -->
+    <script src="./js/app.js"></script>
+    <!--  javascript section end -->
 </body>
 </html>
