--- a/FrequentlyAskedQuestions/index.html
+++ b/FrequentlyAskedQuestions/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Frequently Asked Questions</title>
-    <script src="https://kit.fontawesome.com/175926b250.js" crossorigin="anonymous"></script>
-    <link rel="shortcut icon" href="./icons/question-icon.svg" type="image/x-icon">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="shortcut icon" href="./icons/question-icon.svg" type="image/x-icon">
+    <script src="https://kit.fontawesome.com/175926b250.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <!--Frequently Asked Questions section start-->
@@ -19,45 +19,31 @@
                 </div>
                 <section class="question-section-container section-wraper">
                     <article class="question-section">
-                        <div class="question-component padding-left-right-twenty">
+                        <div class="question-component">
                             <h4 class="question">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem, doloremque! ?</h4>
-                        <button><i class="fa-sharp fa-solid  fa-3x fa-angle-down" ></i></button>
+                            <div class="c"><i class="fa-sharp fa-solid fa-3x fa-angle-down" ></i></div>
                         </div>
-                        <div class="question-desc-container padding-left-right-twenty">
-                            <p class="question-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, sit fugiat! Inventore minus necessitatibus error facere aperiam sequi quasi perspiciatis fugiat. Aperiam porro corporis est sunt tenetur iusto. Sit, nulla!</p>
+                        <div class="question-desc-container">
+                            <p class="question-desc">Lorem ipsum dolor sit amet consectetur, adipisicing elit.Ex eum tempore consectetur modi magnam alias iste, blanditiis nesciunt autem corporis tempora odit saepe praesentium doloremque.</p>
                         </div>
                     </article>
                     <article class="question-section">
-                        <div class="question-component padding-left-right-twenty">
+                        <div class="question-component">
                             <h4 class="question">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem, doloremque! ?</h4>
-                        <button><i class="fa-sharp fa-solid fa-3x fa-angle-down" ></i></button>
+                            <div class="c"><i class="fa-sharp fa-solid fa-3x fa-angle-down" ></i></div>
                         </div>
-                        <div class="question-desc-container padding-left-right-twenty" >
+                        <div class="question-desc-container">
                             <p class="question-desc">Lorem ipsum dolor sit amet consectetur, adipisicing elit.Ex eum tempore consectetur modi magnam alias iste, blanditiis nesciunt autem corporis tempora odit saepe praesentium doloremque.</p>
                         </div>
                     </article>
-                    <article class="question-section ">
-                        <div class="question-component padding-left-right-twenty">
-                            <h4 class="question">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem, doloremque! ?</h4>
-                        <button><i class="fa-sharp fa-solid  fa-3x fa-angle-down" ></i></button>
-                        </div>
-                        <div class="question-desc-container padding-left-right-twenty">
-                            <p class="question-desc">Lorem ipsum dolor sit amet consectetur, adipisicing elit.Ex eum tempore consectetur modi magnam alias iste, blanditiis nesciunt autem corporis tempora odit saepe praesentium doloremque.</p>
-                        </div>
-                    </article>
-                    <article class="question-section ">
-                        <div class="question-component padding-left-right-twenty">
-                            <h4 class="question">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem, doloremque! ?</h4>
-                        <button><i class="fa-sharp fa-solid  fa-3x fa-angle-down" ></i></button>
-                        </div>
-                        <div class="question-desc-container padding-left-right-twenty">
-                            <p class="question-desc">Lorem ipsum dolor sit amet consectetur, adipisicing elit.Ex eum tempore consectetur modi magnam alias iste, blanditiis nesciunt autem corporis tempora odit saepe praesentium doloremque.</p>
-                        </div>
-                    </article>
+                    
                 </section>
             </div>
         </div>
     </div>
     <!--Frequently Asked Questions section end-->
+    <!-- javascript section start -->
+    <script src="./js/app.js"></script>
+    <!-- javascript section end -->
 </body>
 </html>
