--- a/ResponsiveNavbar/index.html
+++ b/ResponsiveNavbar/index.html
@@ -16,7 +16,7 @@
                     <h2 class="name">rk groups</h2>
                 </div>
                 <div class="hambuger">
-                    <img src="./icons/hambuger.svg" alt="hambuger">
+                    <img src="./icons/hambuger.svg" alt="hambuger" >
                 </div>
                 <div class="nav-menu">
                     <ul class="nav-links">
@@ -37,5 +37,29 @@
         </div>
     </nav>
     <!-- nav section end-->
+    <!--mobile nav bar section start-->
+    <nav class="mobile-nav-container">
+        <div class="mobile-nav-center wraper">
+            <section class="mobile-nav-section wraper ">
+                <article class="mobile-nav-menu-main">
+                    <ul class="mobile-nav-menu">
+                        <li><a href="#" class="nav-menu-links">Home</a></li>
+                        <li><a href="#" class="nav-menu-links">About</a></li>
+                        <li><a href="#" class="nav-menu-links">Projects</a></li>
+                        <li><a href="#" class="nav-menu-links">Contact</a></li>
+                    </ul>
+                </article>
+                <article class="mobile-nav-social-main">
+                    <ul class="mobile-nav-social-menu">
+                        <li class="mobile-nav-social-links"><a href="#"><img src="./icons/github.svg" alt="github"></a></li>
+                        <li class="mobile-nav-social-links"><a href="#"><img src="./icons/linkedin.svg" alt="linkedin"></a></li>
+                        <li class="mobile-nav-social-links"><a href="#"><img src="./icons/whatsapp.svg" alt="whatsapp"></a></li>
+                    </ul>
+                </article>
+            </section>
+        </div>
+    </nav>
+    <!--mobile nav bar section end-->
+    <script src="./js/app.js"></script>
 </body>
 </html>
