--- a/icecreamcounter/index.html
+++ b/icecreamcounter/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ice-cream counter</title>
+    <title>Ice-cream Counter</title>
     <link rel="shortcut icon" href="./icon/ice-cream-icon.svg" type="image/x-icon">
     <link rel="stylesheet" href="./css/style.css">
 </head>
@@ -12,8 +12,8 @@
     <!--ice cream counter  section  start-->
     <div class="ice-container">
         <div class="ice-center wraper">
-            <div class="ice-section ">
-                <div class="ice-heading-section ">
+            <div class="ice-section">
+                <div class="ice-heading-section">
                     <h2 class="heading ">ice-cream counter</h2>
                 </div>
                 <div class="ice-img-container padding-lr-mobile-twenty">
@@ -22,16 +22,20 @@
                     </div>
                 </div>
                 <div class="ice-counter">
-                    <div class="counter ">1</div>
+                    <div class="counter"></div>
                 </div>
                 <div class="ice-counter-button">
-                    <button class="counter-buttton">decrease</button>
-                    <button class="counter-buttton">reset</button>
-                    <button class="counter-buttton">increase</button>
+                    <button class="counter-buttton" id="bt-one">decrease</button>
+                    <button class="counter-buttton"id="bt-two">reset</button>
+                    <button class="counter-buttton" id="bt-three">increase</button>
                 </div>
             </div>
         </div>
     </div>
     <!--ice cream counter  section end-->
+    <!-- js script section start -->
+    <script src="./app.js">
+    </script>
+    <!-- js script section end -->
 </body>
 </html>
